# sidekick

./: .gitignore  Justfile  OBJECTIVES.md  PLAN.md  README.md  RESULTS.md  pyproject.toml
examples/: delegate-to-sidekick.SKILL.md
examples/merge-librechat-upstream/: README.md  TASK.md  run.sh
examples/vscode/: keybindings.json  tasks.json
experiments/: bench.py
loopie/: __init__.py  agent_session.py  approval.py  cli.py  config.py  dashboard.py  events.py  kimi_session.py  memory.py  metrics.py  orchestrator.py  planner.py  repo_context.py  skills.py  voice.py  vscode.py  worktree.py
loopie/prompts/: __init__.py
scripts/: selfhosted.env.example  serve_cuda.justfile  serve_vllm.justfile
sidekick/: __init__.py  agent_session.py  cli.py  config.py  context_budget.py  dashboard.py  events.py  kimi_session.py  llm_session.py  memory.py  metrics.py  orchestrator.py  planner.py  providers.py  repo_context.py  skills.py  voice.py  vscode.py  worktree.py
sidekick/channels/: __init__.py  base.py  gateway.py  imessage.py  notify.py  slack.py  telegram.py  whatsapp.py
sidekick/prompts/: __init__.py
tests/: test_approval_and_command.py  test_channels.py  test_context_budget.py  test_events.py  test_kimi.py  test_llm.py  test_metrics.py  test_planner_and_dag.py  test_voice.py  test_vscode_and_progress.py  test_worktree_skills_memory.py
