[project]
name = "sidekick"
version = "0.1.0"
license = "AGPL-3.0-or-later"
description = "Local coding-agent orchestrator: fan out auto-approved coding agents (any LLM via LiteLLM, or native Claude Code) across git worktrees with live progress and measured speed/accuracy objectives."
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7",
    "litellm>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[project.scripts]
sidekick = "sidekick.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidekick"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
